# MovChoi

./: .gitmodules  .sqlfluff  CMakeLists.txt  LICENSE  todo
include/api/: TMDBClient.hpp
include/core/: DatabaseManager.hpp  User.hpp  utils.hpp
include/ui/: cli.hpp  tui.hpp
sql/: schema.sql
src/: main.cpp
src/api/: TMDBClient.cpp
src/core/: DatabaseManager.cpp  utils.cpp
src/ui/: cli.cpp  tui.cpp
